Fixing spacing

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -144,7 +144,7 @@ header li {
   width: 89px;
   float: left;
   border-right: 1px solid #e0e0e0;
-  height: 40px;
+  height: 20px;
 }
 
 header li:first-child a {
